# orbbec-head-tracking

./: README.md  pyproject.toml
.cursor/skills/orbbec-head-tracking/: SKILL.md
.cursor/skills/pipeline-to-diagram/: SKILL.md
.github/workflows/: tests.yml
config/: cnc_compensation_example.yaml
docs/: embed-pipeline-figure.ps1  face-tracking-pipeline-export.ps1  face-tracking-pipeline-ieee.html  face-tracking-pipeline-ieee.mmd  face-tracking-pipeline.html  face-tracking-pipeline.md  face-tracking-pipeline.mmd  pipeline.pptx  ~$pipeline.pptx
scripts/: check_orbbec_device.py
scripts/pipeline_demos/: capture.py
src/orbbec_head_tracking/: __init__.py  cnc_config.py  cnc_kinematics.py  cnc_offset_encoder.py  cnc_offset_test.py  cnc_protocol.py  cnc_safety.py  cnc_udp_streamer.py  cnc_viz.py  config.py  constants.py  ethernet_tcp_streamer.py  frames.py  geometry.py  orbbec_sdk.py  smoothing.py  stream_cnc.py  stream_tcp.py  tracker.py  types.py  viz.py
tests/: test_cnc_config.py  test_cnc_kinematics.py  test_cnc_offset_encoder.py  test_cnc_offset_test.py  test_cnc_protocol.py  test_geometry.py  test_smoothing.py
